--- a/app/src/main/res/layout/item_discover_squarecard.xml
+++ b/app/src/main/res/layout/item_discover_squarecard.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@mipmap/ic_launcher"
-        android:id="@+id/item_discover_iv"
+        android:id="@+id/item_discover_siv"
 
 
         />
@@ -15,7 +15,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="asd"
-    android:id="@+id/item_discover_tv"
+    android:id="@+id/item_discover_stv"
     android:textSize="80dp"
     android:layout_centerInParent="true"/>
 
