--- a/app/src/main/res/layout/item_author_recy_briefcard.xml
+++ b/app/src/main/res/layout/item_author_recy_briefcard.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="10dp"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_author_recy_briefcard_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
     <TextView
         android:id="@+id/tv_item_author_recy_briefcard_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/iv_author_recy_briefcard_icon"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
+
         android:id="@+id/tv_item_author_recy_briefcard_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,6 +30,7 @@
         android:textSize="14sp" />
 
     <TextView
+        android:layout_marginTop="10dp"
         android:id="@+id/tv_item_author_recy_briefcard_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
