--- a/app/src/main/res/layout/item_author_recy_videobrief_recydata.xml
+++ b/app/src/main/res/layout/item_author_recy_videobrief_recydata.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/layout_item_datarecy"
     android:layout_marginLeft="10dp">
     <ImageView
         android:layout_width="wrap_content"
@@ -9,9 +10,8 @@
         android:id="@+id/iv_item_author_data_cover"/>
     <TextView
         android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:text="日料"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="#000000"
@@ -21,7 +21,6 @@
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="日料"
         android:textSize="13sp"
         android:id="@+id/tv_item_author_data_category"/>
 </LinearLayout>
