--- a/app/src/main/res/layout/item_discover_squarecard.xml
+++ b/app/src/main/res/layout/item_discover_squarecard.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:id="@+id/rela_discover"
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@mipmap/ic_launcher"
         android:id="@+id/item_discover_siv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher"
 
 
         />
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="asd"
-    android:id="@+id/item_discover_stv"
-    android:textSize="80dp"
-    android:layout_centerInParent="true"/>
+
+    <TextView
+        android:id="@+id/item_discover_stv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="asd"
+        android:textSize="20sp" />
 
 
 </RelativeLayout>
