--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -25,11 +26,18 @@
         android:hint="验证码"
         android:visibility="gone" />
 
-    <Button
+
+
+    <info.hoang8f.widget.FButton
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="登录" />
+        fbutton:buttonColor="@color/fbutton_color_silver"
+        fbutton:cornerRadius="5dp"
+        fbutton:shadowColor="@color/fbutton_color_asbestos"
+        fbutton:shadowEnabled="true"
+        android:text="登录"
+        fbutton:shadowHeight="5dp" />
 
     <Button
         android:id="@+id/register_two"
