--- a/app/src/main/res/layout/activity_authordetial.xml
+++ b/app/src/main/res/layout/activity_authordetial.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,16 +18,19 @@
                 android:id="@+id/headLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@mipmap/ic_launcher"
                 android:orientation="vertical">
 
-                <ImageView
+
+                <cn.carbs.android.avatarimageview.library.AvatarImageView
                     android:id="@+id/personal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="50dp"
-                    android:src="@mipmap/me_avatar_boy" />
+                    android:src="@mipmap/me_avatar_boy"
+                    app:aiv_BoarderWidth="2dp"
+                    app:aiv_ShowBoarder="false"
+                    app:aiv_TextSizeRatio="0.4" />
 
                 <LinearLayout
                     android:id="@+id/lalala_linearlayout"
@@ -36,13 +40,19 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lalala"
+                        android:id="@+id/authordetial_title"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:text="lalala"
                         android:visibility="visible" />
                 </LinearLayout>
+                <TextView
+                    android:text="asd"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/authordetial_content"/>
             </LinearLayout>
 
             <LinearLayout
@@ -98,7 +108,8 @@
             android:id="@+id/message_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_margin="10dp"
+            android:src="@mipmap/abc_ic_ab_back_holo_light" />
 
 
         <LinearLayout
@@ -124,14 +135,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="@color/colorWhite"
-            android:src="@mipmap/ic_launcher" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="40dp"
             android:background="@color/colorWhite"
             android:src="@mipmap/ic_launcher" />
 
