--- a/app/src/main/res/layout/item_selection_video.xml
+++ b/app/src/main/res/layout/item_selection_video.xml
@@ -9,7 +9,8 @@
     <ImageView
         android:id="@+id/video_icon"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
