--- a/app/src/main/res/layout/item_author_recy_videobrief.xml
+++ b/app/src/main/res/layout/item_author_recy_videobrief.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:padding="10dp"
-
+android:id="@+id/videobrief_relative"
     android:layout_height="wrap_content">
 
     <ImageView
