--- a/app/src/main/res/layout/item_discover_horizontalscrollcard.xml
+++ b/app/src/main/res/layout/item_discover_horizontalscrollcard.xml
@@ -2,9 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<ImageView
+<android.support.v4.view.ViewPager
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/item_discover_riv"
-    android:src="@mipmap/ic_launcher"/>
+    android:id="@+id/horizontalscroll_viewpager"></android.support.v4.view.ViewPager>
 </LinearLayout>
