--- a/app/src/main/res/layout/activity_detialnext.xml
+++ b/app/src/main/res/layout/activity_detialnext.xml
@@ -3,8 +3,15 @@
     android:id="@+id/detialnext_relative"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<ListView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/detialnext_listview"></ListView>
+
+    <ListView
+        android:id="@+id/detialnext_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/detialnext_listview"
+        android:text="end" />
 </RelativeLayout>
