--- a/app/src/main/res/layout/item_detialnext_head_title.xml
+++ b/app/src/main/res/layout/item_detialnext_head_title.xml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <cn.carbs.android.avatarimageview.library.AvatarImageView
+        android:id="@+id/item_detialnext_head_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@mipmap/ic_launcher"
+        app:aiv_BoarderWidth="2dp"
+        app:aiv_ShowBoarder="false"
+        app:aiv_TextSizeRatio="0.4" />
+
+
+    <TextView
+        android:id="@+id/item_detialnext_head_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/item_detialnext_head_image"
+        android:text="sadsad" />
+
+    <TextView
+        android:id="@+id/item_detialnext_head_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/item_detialnext_head_title"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@id/item_detialnext_head_image"
+        android:text="asdsad" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@id/item_detialnext_head_content"
+        android:layout_marginTop="3dp"
+        android:background="#ff0000" />
+</RelativeLayout>
