--- a/app/src/main/res/layout/item_detialnext_recycler.xml
+++ b/app/src/main/res/layout/item_detialnext_recycler.xml
@@ -9,17 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:src="@mipmap/ic_launcher"
+        android:scaleType="fitXY"
         android:id="@+id/detialnext_recycler_image"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:text="asdsa"
         android:ellipsize="marquee"
         android:maxLines="1"
         android:id="@+id/detialnext_recycler_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:text="asd"
         android:layout_height="wrap_content"
         android:id="@+id/detialnext_recycler_time"/>
