--- a/app/src/main/res/layout/item_discover_squarecard.xml
+++ b/app/src/main/res/layout/item_discover_squarecard.xml
@@ -9,10 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher"
-
-
-        />
+        android:src="@mipmap/ic_launcher" />
 
 
     <TextView
@@ -22,8 +19,6 @@
         android:layout_centerInParent="true"
         android:text="asd"
         android:textSize="20sp" />
-
-
 
 
 </RelativeLayout>
