--- a/app/src/main/res/layout/item_selection_video.xml
+++ b/app/src/main/res/layout/item_selection_video.xml
@@ -10,7 +10,8 @@
         android:id="@+id/video_icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:src="@drawable/selection_shape"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
