--- a/app/src/main/res/layout/item_time_data.xml
+++ b/app/src/main/res/layout/item_time_data.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/author_time_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY" />
+        android:src="@drawable/shape"
+        android:scaleType="fitXY"
+        android:layout_height="wrap_content" />
 
     <RelativeLayout
         android:id="@+id/as"
@@ -16,12 +17,12 @@
         android:layout_centerInParent="true">
 
         <TextView
-            android:text="asd"
             android:id="@+id/author_time_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginBottom="10dp"
+            android:text="asd"
             android:textColor="#ffffff"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -36,11 +37,11 @@
             android:orientation="horizontal">
 
             <TextView
-                android:text="asdsadsd"
                 android:id="@+id/author_time_record"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:text="asdsadsd"
                 android:textColor="#ffffff"
                 android:textSize="12sp" />
 
@@ -55,23 +56,23 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:text="sadsd"
                 android:id="@+id/author_time_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:text="sadsd"
                 android:textColor="#ffffff"
                 android:textSize="12sp" />
         </LinearLayout>
 
         <TextView
-            android:text="asdsad"
             android:id="@+id/author_time_title"
             android:layout_width="wrap_content"
-            android:textColor="#ffffff"
-            android:layout_centerHorizontal="true"
             android:layout_height="wrap_content"
-            android:layout_below="@id/asd" />
+            android:layout_below="@id/asd"
+            android:layout_centerHorizontal="true"
+            android:text="asdsad"
+            android:textColor="#ffffff" />
     </RelativeLayout>
 
 
