--- a/app/src/main/res/layout/activity_top.xml
+++ b/app/src/main/res/layout/activity_top.xml
@@ -3,8 +3,16 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+
+
+    <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/item_horizontal_imageview"/>
+        android:id="@+id/tablayout_top"/>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/viewpager_top"
+        android:layout_weight="1"></android.support.v4.view.ViewPager>
+
 </LinearLayout>
