--- a/app/src/main/res/layout/item_detialnext_hotspot.xml
+++ b/app/src/main/res/layout/item_detialnext_hotspot.xml
@@ -8,11 +8,15 @@
         android:id="@+id/item_detialnext_hotspot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
         android:text="sadsad" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/detialnext_recycler_hotspot"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
