--- a/app/src/main/res/layout/item_detialnext_recycler.xml
+++ b/app/src/main/res/layout/item_detialnext_recycler.xml
@@ -6,7 +6,8 @@
 
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
+
         android:layout_height="100dp"
         android:src="@mipmap/ic_launcher"
         android:scaleType="fitXY"
