--- a/app/src/main/res/layout/item_discover_gridview.xml
+++ b/app/src/main/res/layout/item_discover_gridview.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rela_discover"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -9,8 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher"
-
+        android:src="@drawable/shape"
         />
     <TextView
         android:id="@+id/item_discover_stv"
@@ -18,9 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="asd"
+        android:textColor="#ffffff"
         android:textSize="20sp" />
-
-
 
 
 </RelativeLayout>
