--- a/app/src/main/res/layout/item_discover_head.xml
+++ b/app/src/main/res/layout/item_discover_head.xml
@@ -7,13 +7,14 @@
         android:id="@+id/nea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="2">
 
         <ImageView
             android:id="@+id/imageTOP"
-
             android:layout_width="200dp"
             android:layout_height="200dp"
+            android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@mipmap/ic_launcher" />
 
@@ -21,9 +22,9 @@
             android:id="@+id/imageTOPIC"
             android:layout_width="200dp"
             android:layout_height="200dp"
+            android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@mipmap/ic_launcher" />
-
     </LinearLayout>
 
     <ImageView
@@ -33,5 +34,4 @@
         android:layout_below="@id/nea"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher" />
-
 </RelativeLayout>
