--- a/app/src/main/res/layout/activity_videoview.xml
+++ b/app/src/main/res/layout/activity_videoview.xml
@@ -3,15 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<com.youth.banner.Banner
-    android:layout_width="match_parent"
-    android:layout_height="240dp"
-    android:id="@+id/banner"></com.youth.banner.Banner>
-
-
-
-
-
-
-
+    <VideoView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/my_videoview"/>
 </LinearLayout>
