--- a/app/src/main/res/layout/fragment_selection_detail.xml
+++ b/app/src/main/res/layout/fragment_selection_detail.xml
@@ -153,10 +153,13 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <ImageView
+                    <CheckBox
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
+                        android:background="@drawable/like_bg"
+                        android:button="@null"
+                        android:id="@+id/check_selection"
                         android:src="@mipmap/ic_action_favorites_without_padding" />
 
                     <TextView
