--- a/app/src/main/res/layout/item_detialnext_recycler.xml
+++ b/app/src/main/res/layout/item_detialnext_recycler.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
 
+    android:orientation="vertical">
 
 
     <ImageView
-        android:layout_width="300dp"
-
-        android:layout_height="100dp"
+        android:id="@+id/detialnext_recycler_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
-        android:scaleType="fitXY"
-        android:id="@+id/detialnext_recycler_image"/>
+        android:layout_margin="10dp"/>
 
     <TextView
+        android:id="@+id/detialnext_recycler_content"
         android:layout_width="match_parent"
-        android:text="asdsa"
+        android:layout_height="wrap_content"
         android:ellipsize="marquee"
         android:maxLines="1"
-        android:id="@+id/detialnext_recycler_content"
-        android:layout_height="wrap_content" />
+        android:text="asdsa" />
+
     <TextView
+        android:id="@+id/detialnext_recycler_time"
         android:layout_width="match_parent"
-        android:text="asd"
         android:layout_height="wrap_content"
-        android:id="@+id/detialnext_recycler_time"/>
+        android:text="asd" />
 
 
 </LinearLayout>
