--- a/app/src/main/res/layout/item_time_data.xml
+++ b/app/src/main/res/layout/item_time_data.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:id="@+id/time_relative"
+    android:layout_height="150dp">
 
     <ImageView
         android:id="@+id/author_time_image"
         android:layout_width="match_parent"
-        android:src="@drawable/shape"
+
+
         android:scaleType="fitXY"
         android:layout_height="wrap_content" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/shape"
+        android:alpha="0.3"/>
 
     <RelativeLayout
         android:id="@+id/as"
@@ -22,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginBottom="10dp"
-            android:text="asd"
+
             android:textColor="#ffffff"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -41,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="asdsadsd"
+
                 android:textColor="#ffffff"
                 android:textSize="12sp" />
 
@@ -60,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="sadsd"
+
                 android:textColor="#ffffff"
                 android:textSize="12sp" />
         </LinearLayout>
@@ -71,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/asd"
             android:layout_centerHorizontal="true"
-            android:text="asdsad"
+
             android:textColor="#ffffff" />
     </RelativeLayout>
 
