--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,6 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         app:tabTextAppearance="@style/MyTabLayoutTextAppearanceInverse"/>
 </LinearLayout>
