--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -81,6 +81,7 @@
                 android:src="@mipmap/ic_action_compact_favourite_normal" />
 
             <TextView
+                android:id="@+id/tv_download"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="我的收藏" />
