--- a/app/src/main/res/drawable/selection_anim.xml
+++ b/app/src/main/res/drawable/selection_anim.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:oneshot="false">
+    <item
+        android:drawable="@mipmap/ic_eye_white_inner1"
+        android:duration="80" />
+    <item
+        android:drawable="@mipmap/ic_eye_white_inner2"
+        android:duration="80" />
+    <item
+        android:drawable="@mipmap/ic_eye_white_inner3"
+        android:duration="80" />
+    <item
+        android:drawable="@mipmap/ic_eye_white_inner4"
+        android:duration="80" />
+</animation-list>
